<resources>
    <string name="app_name">Quizzer</string>
    <string name="quizzez">Quizzer</string>
    <string name="e_g_adam">e.g. Adam</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="start">start</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="image">image</string>
    <string name="submit">SUBMIT</string>
</resources>