<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/viga"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/quizzez"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:background="@color/white">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/viga"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/viga"
        android:gravity="center"
        android:text="@string/please_enter_your_name"
        android:layout_marginTop="16sp"
        android:textColor="@color/black"
        android:textSize="16sp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_g_adam"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="InvalidId,SpeakableTextPresentCheck,VisualLintTextFieldSize"></androidx.appcompat.widget.AppCompatEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start"
        android:textSize="18sp"
        android:fontFamily="@font/viga"
        android:background="@color/design_default_color_primary"
        tools:ignore="VisualLintButtonSize"></Button>


</LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>